--- a/Pages/index.html
+++ b/Pages/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>my first github with eva</title>
+  <title>my first github with evangadi</title>
 </head>
 <body>
   
